--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,8 +15,10 @@
     "@mui/icons-material": "^7.1.0",
     "@mui/material": "^7.1.0",
     "axios": "^1.9.0",
+    "chart.js": "^4.4.9",
     "framer-motion": "^12.15.0",
     "react": "^19.1.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.1"
   },
