--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,6 @@
 backend/database/__pycache__/*
 backend/models/__pycache__/*
+backend/database/__pycache__/db.cpython-312.pyc
+backend/models/__pycache__/project.cpython-312.pyc
+backend/models/__pycache__/task.cpython-312.pyc
+backend/models/__pycache__/user.cpython-312.pyc
