--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "chart.js": "^4.4.9",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.15.0",
+    "lucide-react": "^0.514.0",
     "react": "^19.1.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.0",
