--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,202 @@ backend/database/__pycache__/db.cpython-312.pyc
 backend/models/__pycache__/project.cpython-312.pyc
 backend/models/__pycache__/task.cpython-312.pyc
 backend/models/__pycache__/user.cpython-312.pyc
+backend/database/__pycache__/db.cpython-312.pyc
+backend/models/__pycache__/project.cpython-312.pyc
+backend/models/__pycache__/task.cpython-312.pyc
+backend/models/__pycache__/user.cpython-312.pyc
+backend/venv/Lib/site-packages/__pycache__/typing_extensions.cpython-312.pyc
+backend/venv/Lib/site-packages/annotated_types/__pycache__/__init__.cpython-312.pyc
+backend/venv/Lib/site-packages/anyio/__pycache__/__init__.cpython-312.pyc
+backend/venv/Lib/site-packages/anyio/__pycache__/from_thread.cpython-312.pyc
+backend/venv/Lib/site-packages/anyio/__pycache__/lowlevel.cpython-312.pyc
+backend/venv/Lib/site-packages/anyio/__pycache__/to_thread.cpython-312.pyc
+backend/venv/Lib/site-packages/anyio/_core/__pycache__/__init__.cpython-312.pyc
+backend/venv/Lib/site-packages/anyio/_core/__pycache__/_eventloop.cpython-312.pyc
+backend/venv/Lib/site-packages/anyio/_core/__pycache__/_exceptions.cpython-312.pyc
+backend/venv/Lib/site-packages/anyio/_core/__pycache__/_fileio.cpython-312.pyc
+backend/venv/Lib/site-packages/anyio/_core/__pycache__/_resources.cpython-312.pyc
+backend/venv/Lib/site-packages/anyio/_core/__pycache__/_signals.cpython-312.pyc
+backend/venv/Lib/site-packages/anyio/_core/__pycache__/_sockets.cpython-312.pyc
+backend/venv/Lib/site-packages/anyio/_core/__pycache__/_streams.cpython-312.pyc
+backend/venv/Lib/site-packages/anyio/_core/__pycache__/_subprocesses.cpython-312.pyc
+backend/venv/Lib/site-packages/anyio/_core/__pycache__/_synchronization.cpython-312.pyc
+backend/venv/Lib/site-packages/anyio/_core/__pycache__/_tasks.cpython-312.pyc
+backend/venv/Lib/site-packages/anyio/_core/__pycache__/_tempfile.cpython-312.pyc
+backend/venv/Lib/site-packages/anyio/_core/__pycache__/_testing.cpython-312.pyc
+backend/venv/Lib/site-packages/anyio/_core/__pycache__/_typedattr.cpython-312.pyc
+backend/venv/Lib/site-packages/anyio/abc/__pycache__/__init__.cpython-312.pyc
+backend/venv/Lib/site-packages/anyio/abc/__pycache__/_eventloop.cpython-312.pyc
+backend/venv/Lib/site-packages/anyio/abc/__pycache__/_resources.cpython-312.pyc
+backend/venv/Lib/site-packages/anyio/abc/__pycache__/_sockets.cpython-312.pyc
+backend/venv/Lib/site-packages/anyio/abc/__pycache__/_streams.cpython-312.pyc
+backend/venv/Lib/site-packages/anyio/abc/__pycache__/_subprocesses.cpython-312.pyc
+backend/venv/Lib/site-packages/anyio/abc/__pycache__/_tasks.cpython-312.pyc
+backend/venv/Lib/site-packages/anyio/abc/__pycache__/_testing.cpython-312.pyc
+backend/venv/Lib/site-packages/anyio/streams/__pycache__/__init__.cpython-312.pyc
+backend/venv/Lib/site-packages/anyio/streams/__pycache__/memory.cpython-312.pyc
+backend/venv/Lib/site-packages/anyio/streams/__pycache__/stapled.cpython-312.pyc
+backend/venv/Lib/site-packages/anyio/streams/__pycache__/tls.cpython-312.pyc
+backend/venv/Lib/site-packages/click/__pycache__/__init__.cpython-312.pyc
+backend/venv/Lib/site-packages/click/__pycache__/_compat.cpython-312.pyc
+backend/venv/Lib/site-packages/click/__pycache__/_winconsole.cpython-312.pyc
+backend/venv/Lib/site-packages/click/__pycache__/core.cpython-312.pyc
+backend/venv/Lib/site-packages/click/__pycache__/decorators.cpython-312.pyc
+backend/venv/Lib/site-packages/click/__pycache__/exceptions.cpython-312.pyc
+backend/venv/Lib/site-packages/click/__pycache__/formatting.cpython-312.pyc
+backend/venv/Lib/site-packages/click/__pycache__/globals.cpython-312.pyc
+backend/venv/Lib/site-packages/click/__pycache__/parser.cpython-312.pyc
+backend/venv/Lib/site-packages/click/__pycache__/termui.cpython-312.pyc
+backend/venv/Lib/site-packages/click/__pycache__/types.cpython-312.pyc
+backend/venv/Lib/site-packages/click/__pycache__/utils.cpython-312.pyc
+backend/venv/Lib/site-packages/fastapi/__pycache__/__init__.cpython-312.pyc
+backend/venv/Lib/site-packages/fastapi/__pycache__/_compat.cpython-312.pyc
+backend/venv/Lib/site-packages/fastapi/__pycache__/applications.cpython-312.pyc
+backend/venv/Lib/site-packages/fastapi/__pycache__/background.cpython-312.pyc
+backend/venv/Lib/site-packages/fastapi/__pycache__/concurrency.cpython-312.pyc
+backend/venv/Lib/site-packages/fastapi/__pycache__/datastructures.cpython-312.pyc
+backend/venv/Lib/site-packages/fastapi/__pycache__/encoders.cpython-312.pyc
+backend/venv/Lib/site-packages/fastapi/__pycache__/exception_handlers.cpython-312.pyc
+backend/venv/Lib/site-packages/fastapi/__pycache__/exceptions.cpython-312.pyc
+backend/venv/Lib/site-packages/fastapi/__pycache__/logger.cpython-312.pyc
+backend/venv/Lib/site-packages/fastapi/__pycache__/param_functions.cpython-312.pyc
+backend/venv/Lib/site-packages/fastapi/__pycache__/params.cpython-312.pyc
+backend/venv/Lib/site-packages/fastapi/__pycache__/requests.cpython-312.pyc
+backend/venv/Lib/site-packages/fastapi/__pycache__/responses.cpython-312.pyc
+backend/venv/Lib/site-packages/fastapi/__pycache__/routing.cpython-312.pyc
+backend/venv/Lib/site-packages/fastapi/__pycache__/staticfiles.cpython-312.pyc
+backend/venv/Lib/site-packages/fastapi/__pycache__/types.cpython-312.pyc
+backend/venv/Lib/site-packages/fastapi/__pycache__/utils.cpython-312.pyc
+backend/venv/Lib/site-packages/fastapi/__pycache__/websockets.cpython-312.pyc
+backend/venv/Lib/site-packages/fastapi/dependencies/__pycache__/__init__.cpython-312.pyc
+backend/venv/Lib/site-packages/fastapi/dependencies/__pycache__/models.cpython-312.pyc
+backend/venv/Lib/site-packages/fastapi/dependencies/__pycache__/utils.cpython-312.pyc
+backend/venv/Lib/site-packages/fastapi/middleware/__pycache__/__init__.cpython-312.pyc
+backend/venv/Lib/site-packages/fastapi/middleware/__pycache__/cors.cpython-312.pyc
+backend/venv/Lib/site-packages/fastapi/openapi/__pycache__/__init__.cpython-312.pyc
+backend/venv/Lib/site-packages/fastapi/openapi/__pycache__/constants.cpython-312.pyc
+backend/venv/Lib/site-packages/fastapi/openapi/__pycache__/docs.cpython-312.pyc
+backend/venv/Lib/site-packages/fastapi/openapi/__pycache__/models.cpython-312.pyc
+backend/venv/Lib/site-packages/fastapi/openapi/__pycache__/utils.cpython-312.pyc
+backend/venv/Lib/site-packages/fastapi/security/__pycache__/__init__.cpython-312.pyc
+backend/venv/Lib/site-packages/fastapi/security/__pycache__/api_key.cpython-312.pyc
+backend/venv/Lib/site-packages/fastapi/security/__pycache__/base.cpython-312.pyc
+backend/venv/Lib/site-packages/fastapi/security/__pycache__/http.cpython-312.pyc
+backend/venv/Lib/site-packages/fastapi/security/__pycache__/oauth2.cpython-312.pyc
+backend/venv/Lib/site-packages/fastapi/security/__pycache__/open_id_connect_url.cpython-312.pyc
+backend/venv/Lib/site-packages/fastapi/security/__pycache__/utils.cpython-312.pyc
+backend/venv/Lib/site-packages/h11/__pycache__/__init__.cpython-312.pyc
+backend/venv/Lib/site-packages/h11/__pycache__/_abnf.cpython-312.pyc
+backend/venv/Lib/site-packages/h11/__pycache__/_connection.cpython-312.pyc
+backend/venv/Lib/site-packages/h11/__pycache__/_events.cpython-312.pyc
+backend/venv/Lib/site-packages/h11/__pycache__/_headers.cpython-312.pyc
+backend/venv/Lib/site-packages/h11/__pycache__/_readers.cpython-312.pyc
+backend/venv/Lib/site-packages/h11/__pycache__/_receivebuffer.cpython-312.pyc
+backend/venv/Lib/site-packages/h11/__pycache__/_state.cpython-312.pyc
+backend/venv/Lib/site-packages/h11/__pycache__/_util.cpython-312.pyc
+backend/venv/Lib/site-packages/h11/__pycache__/_version.cpython-312.pyc
+backend/venv/Lib/site-packages/h11/__pycache__/_writers.cpython-312.pyc
+backend/venv/Lib/site-packages/pydantic/__pycache__/__init__.cpython-312.pyc
+backend/venv/Lib/site-packages/pydantic/__pycache__/_migration.cpython-312.pyc
+backend/venv/Lib/site-packages/pydantic/__pycache__/aliases.cpython-312.pyc
+backend/venv/Lib/site-packages/pydantic/__pycache__/annotated_handlers.cpython-312.pyc
+backend/venv/Lib/site-packages/pydantic/__pycache__/color.cpython-312.pyc
+backend/venv/Lib/site-packages/pydantic/__pycache__/config.cpython-312.pyc
+backend/venv/Lib/site-packages/pydantic/__pycache__/errors.cpython-312.pyc
+backend/venv/Lib/site-packages/pydantic/__pycache__/fields.cpython-312.pyc
+backend/venv/Lib/site-packages/pydantic/__pycache__/functional_validators.cpython-312.pyc
+backend/venv/Lib/site-packages/pydantic/__pycache__/json_schema.cpython-312.pyc
+backend/venv/Lib/site-packages/pydantic/__pycache__/main.cpython-312.pyc
+backend/venv/Lib/site-packages/pydantic/__pycache__/networks.cpython-312.pyc
+backend/venv/Lib/site-packages/pydantic/__pycache__/type_adapter.cpython-312.pyc
+backend/venv/Lib/site-packages/pydantic/__pycache__/types.cpython-312.pyc
+backend/venv/Lib/site-packages/pydantic/__pycache__/version.cpython-312.pyc
+backend/venv/Lib/site-packages/pydantic/__pycache__/warnings.cpython-312.pyc
+backend/venv/Lib/site-packages/pydantic/_internal/__pycache__/__init__.cpython-312.pyc
+backend/venv/Lib/site-packages/pydantic/_internal/__pycache__/_config.cpython-312.pyc
+backend/venv/Lib/site-packages/pydantic/_internal/__pycache__/_core_metadata.cpython-312.pyc
+backend/venv/Lib/site-packages/pydantic/_internal/__pycache__/_core_utils.cpython-312.pyc
+backend/venv/Lib/site-packages/pydantic/_internal/__pycache__/_decorators.cpython-312.pyc
+backend/venv/Lib/site-packages/pydantic/_internal/__pycache__/_discriminated_union.cpython-312.pyc
+backend/venv/Lib/site-packages/pydantic/_internal/__pycache__/_docs_extraction.cpython-312.pyc
+backend/venv/Lib/site-packages/pydantic/_internal/__pycache__/_fields.cpython-312.pyc
+backend/venv/Lib/site-packages/pydantic/_internal/__pycache__/_forward_ref.cpython-312.pyc
+backend/venv/Lib/site-packages/pydantic/_internal/__pycache__/_generate_schema.cpython-312.pyc
+backend/venv/Lib/site-packages/pydantic/_internal/__pycache__/_generics.cpython-312.pyc
+backend/venv/Lib/site-packages/pydantic/_internal/__pycache__/_import_utils.cpython-312.pyc
+backend/venv/Lib/site-packages/pydantic/_internal/__pycache__/_internal_dataclass.cpython-312.pyc
+backend/venv/Lib/site-packages/pydantic/_internal/__pycache__/_known_annotated_metadata.cpython-312.pyc
+backend/venv/Lib/site-packages/pydantic/_internal/__pycache__/_mock_val_ser.cpython-312.pyc
+backend/venv/Lib/site-packages/pydantic/_internal/__pycache__/_model_construction.cpython-312.pyc
+backend/venv/Lib/site-packages/pydantic/_internal/__pycache__/_namespace_utils.cpython-312.pyc
+backend/venv/Lib/site-packages/pydantic/_internal/__pycache__/_repr.cpython-312.pyc
+backend/venv/Lib/site-packages/pydantic/_internal/__pycache__/_schema_gather.cpython-312.pyc
+backend/venv/Lib/site-packages/pydantic/_internal/__pycache__/_schema_generation_shared.cpython-312.pyc
+backend/venv/Lib/site-packages/pydantic/_internal/__pycache__/_signature.cpython-312.pyc
+backend/venv/Lib/site-packages/pydantic/_internal/__pycache__/_typing_extra.cpython-312.pyc
+backend/venv/Lib/site-packages/pydantic/_internal/__pycache__/_utils.cpython-312.pyc
+backend/venv/Lib/site-packages/pydantic/_internal/__pycache__/_validators.cpython-312.pyc
+backend/venv/Lib/site-packages/pydantic/plugin/__pycache__/__init__.cpython-312.pyc
+backend/venv/Lib/site-packages/pydantic/plugin/__pycache__/_loader.cpython-312.pyc
+backend/venv/Lib/site-packages/pydantic/plugin/__pycache__/_schema_validator.cpython-312.pyc
+backend/venv/Lib/site-packages/pydantic_core/__pycache__/__init__.cpython-312.pyc
+backend/venv/Lib/site-packages/pydantic_core/__pycache__/core_schema.cpython-312.pyc
+backend/venv/Lib/site-packages/sniffio/__pycache__/__init__.cpython-312.pyc
+backend/venv/Lib/site-packages/sniffio/__pycache__/_impl.cpython-312.pyc
+backend/venv/Lib/site-packages/sniffio/__pycache__/_version.cpython-312.pyc
+backend/venv/Lib/site-packages/starlette/__pycache__/__init__.cpython-312.pyc
+backend/venv/Lib/site-packages/starlette/__pycache__/_exception_handler.cpython-312.pyc
+backend/venv/Lib/site-packages/starlette/__pycache__/_utils.cpython-312.pyc
+backend/venv/Lib/site-packages/starlette/__pycache__/applications.cpython-312.pyc
+backend/venv/Lib/site-packages/starlette/__pycache__/background.cpython-312.pyc
+backend/venv/Lib/site-packages/starlette/__pycache__/concurrency.cpython-312.pyc
+backend/venv/Lib/site-packages/starlette/__pycache__/convertors.cpython-312.pyc
+backend/venv/Lib/site-packages/starlette/__pycache__/datastructures.cpython-312.pyc
+backend/venv/Lib/site-packages/starlette/__pycache__/exceptions.cpython-312.pyc
+backend/venv/Lib/site-packages/starlette/__pycache__/formparsers.cpython-312.pyc
+backend/venv/Lib/site-packages/starlette/__pycache__/requests.cpython-312.pyc
+backend/venv/Lib/site-packages/starlette/__pycache__/responses.cpython-312.pyc
+backend/venv/Lib/site-packages/starlette/__pycache__/routing.cpython-312.pyc
+backend/venv/Lib/site-packages/starlette/__pycache__/staticfiles.cpython-312.pyc
+backend/venv/Lib/site-packages/starlette/__pycache__/status.cpython-312.pyc
+backend/venv/Lib/site-packages/starlette/__pycache__/types.cpython-312.pyc
+backend/venv/Lib/site-packages/starlette/__pycache__/websockets.cpython-312.pyc
+backend/venv/Lib/site-packages/starlette/middleware/__pycache__/__init__.cpython-312.pyc
+backend/venv/Lib/site-packages/starlette/middleware/__pycache__/base.cpython-312.pyc
+backend/venv/Lib/site-packages/starlette/middleware/__pycache__/cors.cpython-312.pyc
+backend/venv/Lib/site-packages/starlette/middleware/__pycache__/errors.cpython-312.pyc
+backend/venv/Lib/site-packages/starlette/middleware/__pycache__/exceptions.cpython-312.pyc
+backend/venv/Lib/site-packages/typing_inspection/__pycache__/__init__.cpython-312.pyc
+backend/venv/Lib/site-packages/typing_inspection/__pycache__/introspection.cpython-312.pyc
+backend/venv/Lib/site-packages/typing_inspection/__pycache__/typing_objects.cpython-312.pyc
+backend/venv/Lib/site-packages/uvicorn/__pycache__/__init__.cpython-312.pyc
+backend/venv/Lib/site-packages/uvicorn/__pycache__/_subprocess.cpython-312.pyc
+backend/venv/Lib/site-packages/uvicorn/__pycache__/_types.cpython-312.pyc
+backend/venv/Lib/site-packages/uvicorn/__pycache__/config.cpython-312.pyc
+backend/venv/Lib/site-packages/uvicorn/__pycache__/importer.cpython-312.pyc
+backend/venv/Lib/site-packages/uvicorn/__pycache__/logging.cpython-312.pyc
+backend/venv/Lib/site-packages/uvicorn/__pycache__/main.cpython-312.pyc
+backend/venv/Lib/site-packages/uvicorn/__pycache__/server.cpython-312.pyc
+backend/venv/Lib/site-packages/uvicorn/lifespan/__pycache__/__init__.cpython-312.pyc
+backend/venv/Lib/site-packages/uvicorn/lifespan/__pycache__/on.cpython-312.pyc
+backend/venv/Lib/site-packages/uvicorn/loops/__pycache__/__init__.cpython-312.pyc
+backend/venv/Lib/site-packages/uvicorn/loops/__pycache__/asyncio.cpython-312.pyc
+backend/venv/Lib/site-packages/uvicorn/loops/__pycache__/auto.cpython-312.pyc
+backend/venv/Lib/site-packages/uvicorn/middleware/__pycache__/__init__.cpython-312.pyc
+backend/venv/Lib/site-packages/uvicorn/middleware/__pycache__/asgi2.cpython-312.pyc
+backend/venv/Lib/site-packages/uvicorn/middleware/__pycache__/message_logger.cpython-312.pyc
+backend/venv/Lib/site-packages/uvicorn/middleware/__pycache__/proxy_headers.cpython-312.pyc
+backend/venv/Lib/site-packages/uvicorn/middleware/__pycache__/wsgi.cpython-312.pyc
+backend/venv/Lib/site-packages/uvicorn/protocols/__pycache__/__init__.cpython-312.pyc
+backend/venv/Lib/site-packages/uvicorn/protocols/__pycache__/utils.cpython-312.pyc
+backend/venv/Lib/site-packages/uvicorn/protocols/http/__pycache__/__init__.cpython-312.pyc
+backend/venv/Lib/site-packages/uvicorn/protocols/http/__pycache__/auto.cpython-312.pyc
+backend/venv/Lib/site-packages/uvicorn/protocols/http/__pycache__/flow_control.cpython-312.pyc
+backend/venv/Lib/site-packages/uvicorn/protocols/http/__pycache__/h11_impl.cpython-312.pyc
+backend/venv/Lib/site-packages/uvicorn/protocols/websockets/__pycache__/__init__.cpython-312.pyc
+backend/venv/Lib/site-packages/uvicorn/protocols/websockets/__pycache__/auto.cpython-312.pyc
+backend/venv/Lib/site-packages/uvicorn/supervisors/__pycache__/__init__.cpython-312.pyc
+backend/venv/Lib/site-packages/uvicorn/supervisors/__pycache__/basereload.cpython-312.pyc
+backend/venv/Lib/site-packages/uvicorn/supervisors/__pycache__/multiprocess.cpython-312.pyc
+backend/venv/Lib/site-packages/uvicorn/supervisors/__pycache__/statreload.cpython-312.pyc
+backend/venv/Lib/site-packages/uvicorn/supervisors/__pycache__/watchfilesreload.cpython-312.pyc
